# echo

./: README.md  long_time_resident.md  long_time_resident_1.md  long_time_resident_2.md  long_time_resident_3.md  pyproject.toml  research.md  young_family_resident.md  young_family_resident_1.md  young_family_resident_2.md  young_family_resident_3.md
knowledge/: BSA_survey_old_owner_preferences.md  BSA_survey_young_renter_preferences.md  design_code_summary.md  environmental_assessment_by_location.md  landscape_and_visual_impact_assessment_by_location.md  neighbourhood_plan_summary.md  newspaper_article.txt  planning_statment-developer_mitigations.md  smallfield_development_summary.md  transport_assessment_by_location.md
output/: report.md
src/echo/: crew.py  main.py
src/echo/config/: agents.yaml  tasks.yaml
