[project]
name = "echo"
version = "0.1.0"
description = "echo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
echo = "echo.main:run"
run_crew = "echo.main:run"
train = "echo.main:train"
replay = "echo.main:replay"
test = "echo.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
